--- a/amber/css/amber.css
+++ b/amber/css/amber.css
@@ -153,6 +153,10 @@
   -webkit-transform: rotate(45deg);                                                       
 }        
 
+.amber-hover.memento-found .amber-arrow {
+  display: none;
+}
+
 .amber-hover .amber-text {
   border-radius: 4px 4px 0 0;
   width: 100%;
@@ -213,23 +217,20 @@
   display: none;
 }
 
-.amber-hover a.amber-memento-link.found {
+.amber-hover.memento-found a.amber-memento-link {
   color: white !important;
   display: block;
   height: 15px;
   width: 100%;
-  margin-left: 40px;
-  margin-top: -15px;
-  font-size: 9px;
-  line-height: 12px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  text-align: center;
+  font-size: 10px;
+  line-height: 15px;
+  background-color: #86b0dc;  
   z-index: 9999999;
 }
 
-.amber-hover.amber-down a.amber-memento-link.found {
-  margin-left: 70px;
-  margin-top: -19px;
-  height: 19px;
-}
 
 .amber-hover a.amber-focus {
   font-weight: bold;
