--- a/amber/css/amber.css
+++ b/amber/css/amber.css
@@ -75,11 +75,14 @@
 
 .amber-interstitial a.amber-memento-link.found {
   color: white;
-  top: -50px;
+  top: -40px;
   height: 10px;
-  margin-bottom: -10px;
+  margin: 0 auto -10px auto;
   position: relative;
   display: block;
+  width: 250px;
+  font-size: 12px;
+  line-height: 14px;
 }
 
 .amber-iframe-container {
